alignment bugs

--- a/src/app/shared/components/newsContentComponent/newsContentComponent.component.css
+++ b/src/app/shared/components/newsContentComponent/newsContentComponent.component.css
@@ -8,7 +8,6 @@
 .mat-card-no-pic{
     max-width: 550px;
     min-height: 182px !important;
-    max-height: 182px !important;
 }
 
 .mat-card-inner-desing{
@@ -116,6 +115,11 @@ only screen and (max-width: 760px),
     }
 
     .small-window-mat-card-inner-design{
+        max-width: 90vw;
+        min-height: 0px;
+    }
+
+    .small-window-mat-card-no-pic{
         max-width: 90vw;
         min-height: 0px;
     }
